--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,5 @@
 // @import url(/sass/null_style.css);
 // @import url(/sass/base/_base.scss);
 // @import url(/sass/blocks/nav.css);
-
-body {
-    color:red;
-}
+// @import url(/sass/base/logo.scss);
+// @import url
