--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
-// @import url(/sass/null_style.css);
-// @import url(/sass/base/_base.scss);
-// @import url(/sass/blocks/nav.css);
-// @import url(/sass/base/logo.scss);
-// @import url
+@import url(/src/sass/null_style.scss);
+@import url(/src/sass/base/base.scss);
+@import url(/src/sass/blocks/nav.scss);
+@import url(/src/sass/blocks/logo.scss);
+@import url(/src/index.scss);
