work for lending project

--- a/src/sass/blocks/logo.scss
+++ b/src/sass/blocks/logo.scss
@@ -1,3 +1,8 @@
-.logo{display: flex;
-align-items:center;
-img{margin-right: 15px;}}
+.logo {
+  display: flex;
+  align-items: center;
+
+  img {
+    margin-right: 5px;
+  }
+}
