--- a/src/sass/null_style.scss
+++ b/src/sass/null_style.scss
@@ -8,6 +8,7 @@ html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms
 input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
+input[type="submit"]
 button::-moz-focus-inner{padding:0;border:0;}
 a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
