work from project

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,5 +10,12 @@
 @import './sass/blocks/clients.scss';
 @import './sass/blocks/objects.scss';
 @import './sass/blocks/image-cards.scss';
+@import './sass/blocks/card-info.scss';
+@import './sass/blocks/cta.scss';
+@import './sass/blocks/serve.scss';
+@import './sass/blocks/card__customer.scss';
+
+
+
 
 
