--- a/src/sass/blocks/image-cards.scss
+++ b/src/sass/blocks/image-cards.scss
@@ -1,5 +1,11 @@
 .img__card { &+& {margin-left: 32px;}
+position: relative;
+width: 385px;
 }
 .img-card__img {border-radius: 20px 20px 0 20px;
     .img-card__rounder &{border-radius: 20px};
+}
+
+.img-card__info {position: absolute; right: -46px;
+    bottom: 87px;
 }
