--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,12 @@
 @import './sass/blocks/cta.scss';
 @import './sass/blocks/serve.scss';
 @import './sass/blocks/card__customer.scss';
+@import './sass/blocks/benefits.scss';
+@import './sass/blocks/benefit-item.scss';
+@import './sass/blocks/testimonials.scss';
+@import './sass/blocks/card-testimonials.scss';
+
+
 
 
 
