--- a/src/sass/blocks/serve.scss
+++ b/src/sass/blocks/serve.scss
@@ -1,8 +1,15 @@
-.serve {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: #f5f6fa;
-
+.serve {position: relative;
+    padding-top: 0px;
+    padding-bottom: 120px;
+&:before{content:"";
+    position: absolute;
+display: block;
+width: 100%;
+height: 100%;
+background-color:#f5f6fa;
+z-index:-1;
+top: -50%;
+left: 0;}
 }
 .serve__heading {
     text-align: center;
