--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,8 @@
 @import './sass/blocks/benefit-item.scss';
 @import './sass/blocks/testimonials.scss';
 @import './sass/blocks/card-testimonials.scss';
+@import './sass/blocks/contacts.scss';
+@import './sass/blocks/footer.scss';
 
 
 
