--- a/src/sass/blocks/testimonials.scss
+++ b/src/sass/blocks/testimonials.scss
@@ -16,6 +16,7 @@ max-width: 400px;
 .testimonials__row {display: flex;
     justify-content: space-between;
     align-items: stretch;
+    margin-right:40px;
     column-gap: 30px;
     position: relative;
     &::after{content: "";
